2005-06-15  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c: Track removal of cairo_status_string.
	(cairo_test_for_target): And add missing parenthesis.

2005-06-15  Carl Worth  <cworth@cworth.org>

	* TODO: Add cairo_finish to TODO list. Note that
	cairo_satus_string has now been removed.

2005-06-15  Carl Worth  <cworth@cworth.org>

	* src/cairo.h:
	* src/cairo.c: Remove cairo_status_string function which can now
	be replaced by:

		cairo_status_to_string (cairo_status (cr));

	This allows consistent handling of status values for things like
	cairo_pattern_status where there is now
	cairo_pattern_status_string function.

2005-06-13  Carl Worth  <cworth@cworth.org>

	* src/cairo.c: (_cairo_error): Add _cairo_error so we have a
	single function which all errors can pass through. This allows the
	user to set a breakpoint on error and will allow us to augment
	error handling later as necessary.

	* src/cairo.c: (cairo_create), (cairo_reference),
	(cairo_destroy), (cairo_save), (cairo_restore),
	(cairo_set_operator), (cairo_set_source_rgb),
	(cairo_set_source_rgba), (cairo_set_source_surface),
	(cairo_set_source), (cairo_get_source), (cairo_set_tolerance),
	(cairo_set_fill_rule), (cairo_set_line_width),
	(cairo_set_line_cap), (cairo_set_line_join), (cairo_set_dash),
	(cairo_set_miter_limit), (cairo_translate), (cairo_scale),
	(cairo_rotate), (cairo_transform), (cairo_set_matrix),
	(cairo_identity_matrix), (cairo_user_to_device),
	(cairo_user_to_device_distance), (cairo_device_to_user),
	(cairo_device_to_user_distance), (cairo_new_path), (cairo_move_to),
	(cairo_line_to), (cairo_curve_to), (cairo_arc),
	(cairo_arc_negative), (cairo_rel_move_to), (cairo_rel_line_to),
	(cairo_rel_curve_to), (cairo_rectangle), (cairo_close_path),
	(cairo_paint), (cairo_paint_with_alpha), (cairo_mask),
	(cairo_mask_surface), (cairo_stroke_preserve),
	(cairo_fill_preserve), (cairo_copy_page), (cairo_show_page),
	(cairo_in_stroke), (cairo_in_fill), (cairo_stroke_extents),