@@ -1,3 +1,10 @@
+2005-06-15  Owen Taylor  <otaylor@redhat.com>
+
+	* src/cairo-gstate.c (_cairo_gstate_clip_and_composite_trapezoids):
+	Use a clip region when rendering a non-solid pattern through
+	a rectangular path ... trapezoid rasterization is just too slow
+	to use that path when we aren't forced to do so.
+
 2005-06-15  Carl Worth  <cworth@cworth.org>
 
 	* test/cairo-test.c: Track removal of cairo_status_string.
